# epik-bot

./: .gitignore  .replit  README.md  botcode.py  config.json  main.py  main.sh  pyproject.toml  requirements.txt  startup.py  webserver.py
bot_cogs/: botcogs.py  botcommands.py  botevents.py
bot_json_files/: config.json
bot_modules/: admincommands.py  botcommands.py  botevents.py  warning_reaction.py
