[tool.poetry]
name = "repl_python3_botcode.py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
"discord.py" = "^1.7.2"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
uild-backend = "poetry.masonry.api"
